# logtape

./: .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md
examples/: upstream_demo.rs
spec/: v0.1.md
src/: cli.rs  event.rs  lib.rs  main.rs  spec.rs
src/fmt/: fmt.rs  mod.rs
src/lint/: lint.rs  mod.rs
src/tap/: http.rs
tests/: fmt_roundtrip.rs  lint_golden.rs  tap_http_integration.rs
tests/fixtures/: bad.jsonl  good.jsonl
